ctrader/target/debug/build/erasable-c25b40c3080ea9a2/stderr
error[E0658]: extern types are experimental
 --> <anon>:1:37
  |
1 | ..._ = { extern { type T; } () }; }
  |                   ^^^^^^^
  |
  = note: see issue #43467 <https://github.com/rust-lang/rust/issues/43467> for more information

warning: `extern` declarations without an explicit ABI are deprecated
 --> <anon>:1:28
  |
1 | ... { let _ = { extern { type T; } () }; }
  |                 ^^^^^^ help: explicitly specify the "C" ABI: `extern "C"`
  |
  = note: `#[warn(missing_abi)]` on by default

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0658`.
error[E0658]: the `!` type is experimental
 --> <anon>:1:18
  |
1 | pub type Probe = !;
  |                  ^
  |
  = note: see issue #35121 <https://github.com/rust-lang/rust/issues/35121> for more information

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
